fixing bug that stretched the project gallery images on tall windows

--- a/css/base.css
+++ b/css/base.css
@@ -450,8 +450,7 @@ img {
     height:100%;
 }
     #project-slides li img {
-        min-width:100%;
-        min-height:100%;
+        max-width: inherit;
     }
 #project-info {
     position: absolute;
